kubeconfig/sidekiq-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: decidim-k8s-sidekiq-deployment
spec:
  selector:
    matchLabels:
      sidekiq: decidim-k8s-sidekiq
  template:
    metadata:
      labels:
        sidekiq: decidim-k8s-sidekiq
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: decidim-k8s-sidekiq
          image: rg.fr-par.scw.cloud/decidim/osp-decidim:latest
          args: ["/usr/local/bundle/bin/bundle", "exec", "sidekiq", "-C", "config/sidekiq.yml"]
          resources:
            requests:
              cpu: "256m"
              memory: "600Mi"
            limits:
              cpu: "300m"
              memory: "900Mi"
          ports:
            - containerPort: 3000
          livenessProbe:
            exec:
              command: ["./sidekiq_alive.sh"]
            failureThreshold: 3
            periodSeconds: 10
          startupProbe:
            exec:
              command: ["./sidekiq_alive.sh"]
            initialDelaySeconds: 120
            failureThreshold: 30
            periodSeconds: 10
          lifecycle:
            preStop:
              exec:
                command: ["./sidekiq_quiet.sh"]
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - decidim-k8s-sidekiq
                topologyKey: topology.kubernetes.io/zone
