kubeconfig/terminal.yaml
apiVersion: v1
kind: Pod
metadata:
  name: decidim-k8s-terminal-pod
spec:
  containers:
    - name: decidim-k8s-terminal
      image: rg.fr-par.scw.cloud/decidim/osp-decidim:latest
      command: ['sleep']
      args: ['infinity']
