kubeconfig/load_balancer.yml
apiVersion: v1
kind: Service
metadata:
  name: decidim-k8s-load-balancer
spec:
  type: LoadBalancer
  selector:
    app: decidim-k8s-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000

    - name: psql
      protocol: TCP
      port: 5432
      targetPort: 5432
