kubeconfig/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: osp-app-k8s-ing
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - decidim-k8s.opensourcepolitics.net
      secretName: decidim-tls
  rules:
    - host: decidim-k8s.opensourcepolitics.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: decidim-k8s-app-load-balancer
                port:
                  number: 80
